feat(esinf): fixes tests for basket list